Add delete and put requests (#7)
* add deleteUser

* add deleteChat

* add deleteMessage

* add patch for message

* add path for user info
